--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,67 @@
 body {
+  background-color: rgb(113, 111, 111);
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Lobster', cursive;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#navbar {
+  background-color: gray;
+  background-image: url('./images/lotus-background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  justify-items: center;
+  align-items: center;
+  border-bottom: 2px solid rgb(54, 54, 54);
+}
+
+
+.navbuttons {
+  width: 100%;
+  color: white;
+  grid-column: 9 / 13;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  text-decoration: none;
+  justify-content: space-evenly;
+}
+
+.navbuttons > button {
+  background: none;
+  border: none;
+  font-family: 'Lobster', cursive;
+}
+
+a:visited {
+  text-decoration: none;
+  color: white;
+}
+
+#main-heading {
+  grid-column: 5 / 9;
+  margin: 0px;
+}
+
+#main-heading > h1 {
+  text-transform: uppercase;
+  font-size: 3.5em;
+  font-weight: 400;
+  color: #f5f5f5;
+  white-space: nowrap;
+  text-shadow: 1px 1px 1px #919191,
+      1px 2px 1px #919191,
+      1px 3px 1px #919191,
+      1px 4px 1px #919191,
+      1px 5px 1px #919191,
+  1px 6px 2px rgba(16,16,16,0.4),
+  1px 4px 3px rgba(16,16,16,0.2),
+  1px 6px 12px rgba(16,16,16,0.2),
+  1px 10px 20px rgba(16,16,16,0.4);
+}
+
+#home, #poses, #mats, #user {
+  border-top: 1px solid rgb(54, 54, 54);
 }
