--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 body {
   background-color: rgb(113, 111, 111);
   margin: 0;
+  color: white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: 'Lobster', cursive;
+  font-family: 'Raleway', sans-serif;
 }
 
 #navbar {
@@ -21,18 +22,17 @@ body {
 
 .navbuttons {
   width: 100%;
-  color: white;
   grid-column: 9 / 13;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   text-decoration: none;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 
 .navbuttons > button {
   background: none;
   border: none;
-  font-family: 'Lobster', cursive;
+  font-family: 'Raleway', sans-serif;
 }
 
 a:visited {
@@ -41,21 +41,20 @@ a:visited {
 }
 
 #main-heading {
-  grid-column: 5 / 9;
+  transform: translateX(15px);
+  grid-column: 4 / 9;
   margin: 0px;
 }
 
 #main-heading > h1 {
+  font-family: 'Bellota', cursive;
   text-transform: uppercase;
   font-size: 3.5em;
   font-weight: 400;
-  color: #f5f5f5;
   white-space: nowrap;
   text-shadow: 1px 1px 1px #919191,
       1px 2px 1px #919191,
-      1px 3px 1px #919191,
-      1px 4px 1px #919191,
-      1px 5px 1px #919191,
+      1px 2px 1px #919191,
   1px 6px 2px rgba(16,16,16,0.4),
   1px 4px 3px rgba(16,16,16,0.2),
   1px 6px 12px rgba(16,16,16,0.2),
@@ -64,4 +63,37 @@ a:visited {
 
 #home, #poses, #mats, #user {
   border-top: 1px solid rgb(54, 54, 54);
+}
+
+.mat > img {
+  width: 20em;
+  height: 20em;
+  object-fit: cover;
+}
+
+.mat > ul {
+  list-style-type: none;
+}
+
+#mats {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: center;
+}
+
+#mats > h1 {
+  grid-column: 1 / 5;
+  text-align: center;
+}
+
+#mat-filter {
+  grid-column: 1 / 5;
+  text-align: center
+}
+
+.mat {
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  padding-top: 2em;
 }
