--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,12 @@ body {
   color: white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'M PLUS 1', sans-serif;
 }
 
 #navbar {
   background-color: gray;
-  background-image: url('./images/lotus-background.jpg');
+  background-image: url('https://images.unsplash.com/photo-1558591710-4b4a1ae0f04d?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887');
   background-repeat: no-repeat;
   background-size: cover;
   display: grid;
@@ -20,80 +20,195 @@ body {
 }
 
 
-.navbuttons {
+.menu {
+  color: rgb(66, 66, 66);
   width: 100%;
-  grid-column: 9 / 13;
+  grid-column: 4 / 10;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   text-decoration: none;
   justify-content: space-around;
 }
 
-.navbuttons > button {
+.menu > button {
+  text-decoration: none;
   background: none;
   border: none;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'M PLUS 1', sans-serif;
+  margin: 1em;
 }
 
 a:visited {
   text-decoration: none;
-  color: white;
+  color: rgb(66, 66, 66);
 }
 
 #main-heading {
   transform: translateX(15px);
-  grid-column: 4 / 9;
+  grid-column: 1 / 13;
   margin: 0px;
+  padding: 0px;
 }
 
 #main-heading > h1 {
-  font-family: 'Bellota', cursive;
+  background-color: rgb(255, 255, 255, 0.5);
+  color:rgb(66, 66, 66);
+  font-family: 'M PLUS 1', sans-serif;
   text-transform: uppercase;
   font-size: 3.5em;
-  font-weight: 400;
+  font-weight: 600;
   white-space: nowrap;
-  text-shadow: 1px 1px 1px #919191,
-      1px 2px 1px #919191,
-      1px 2px 1px #919191,
-  1px 6px 2px rgba(16,16,16,0.4),
-  1px 4px 3px rgba(16,16,16,0.2),
-  1px 6px 12px rgba(16,16,16,0.2),
-  1px 10px 20px rgba(16,16,16,0.4);
+  margin: 0.25em;
+  padding: 0.25em;
 }
 
 #home, #poses, #mats, #user {
-  border-top: 1px solid rgb(54, 54, 54);
+  border-top: 1px solid rgb(255, 255, 255);
 }
 
-.mat > img {
-  width: 20em;
-  height: 20em;
-  object-fit: cover;
+.title {
+  font-size: 3.5em;
+  margin-bottom: 0px;
+  margin-top: 0.5em;
 }
 
-.mat > ul {
-  list-style-type: none;
-}
-
-#mats {
+.lists {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   justify-content: center;
 }
 
-#mats > h1 {
+.lists > h1 {
   grid-column: 1 / 5;
   text-align: center;
 }
 
-#mat-filter {
+.filter {
   grid-column: 1 / 5;
   text-align: center
 }
 
-.mat {
+.list {
   display: grid;
   grid-template-columns: 1fr;
+  grid-auto-rows: minmax(min-content, max-content);
   justify-items: center;
-  padding-top: 2em;
+  align-items: center;
+  background-color:rgb(54, 54, 54);
+  margin: 10px;
+  padding-top: 10px;
+}
+
+.list > p {
+  text-align: justify;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
+  margin-bottom: 1em;
+}
+
+.list > h2 {
+  margin: 0.5em;
+}
+
+.list > h3 {
+  margin: 0.25em;
+}
+
+.list > img {
+  margin: 1em;
+  width: 20em;
+  height: 20em;
+  object-fit: cover;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0px;
+  margin: 0.5em;
+}
+
+li {
+  font-weight: bold;
+  padding: 0px;
+  text-align: center;
+  display: block;
+}
+
+.like-btn {
+  background-color: gray;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.liked-btn {
+  background-color:rgb(54, 54, 54);
+  color: white;
+  border: none;
+  border-radius: 50%;
+  margin: 0px;
+  padding: 0px;
+  pointer-events: none;
+}
+
+.search {
+  width: 20em;
+  margin-bottom: 2em;
+}
+
+#hi {
+  text-align: center;
+}
+
+.lists > h2 {
+  grid-column: 1 / 13;
+  text-align: center;
+}
+
+.fav-lists {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  justify-content: center;
+}
+
+.fav-lists > h2 {
+  grid-column: 1 / 6;
+  text-align: center;
+}
+
+.fav-list {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: minmax(min-content, max-content);
+  justify-items: center;
+  align-items: center;
+  background-color:rgb(54, 54, 54);
+  margin: 10px;
+  padding-top: 10px;
+}
+
+.fav-list > img {
+  width: 15em;
+  height: 15em;
+  object-fit: cover;
+  margin: 1em;
+}
+
+.fav-list > h4 {
+  margin: none;
+  padding: none;
+}
+
+#calendar {
+  width: 60%;
+  display: block;
+  margin: auto;
+}
+
+#calendar > h1 {
+  text-align: center;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  position: relative;
+  top: 1em;
 }
